--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My practice work</title>
+    <link rel="shortcut icon" href="images/Anika/20190517_203640.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styles/work.css">
 </head>
 
 <body>
-
+    <header class="header">
+        <h1 class="color">Welcome to my website</h1>
+    </header>
+    <h2>This is my first work</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quibusdam reprehenderit nisi nihil, sapiente
+        qui.</p>
+    <img src="images/Anika/20190214_164124.jpg" alt="">
 </body>
 
 </html>
