--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>My practice work</title>
     <link rel="shortcut icon" href="images/Anika/20190517_203640.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/work.css">
+    <script src="https://kit.fontawesome.com/63b886cc44.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
-        <h1 class="color">Welcome to my website</h1>
+        <h1 class="color"><i class="fa-solid fa-shop"></i>Welcome to my website</h1>
     </header>
     <h2>This is my first work</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quibusdam reprehenderit nisi nihil, sapiente
         qui.</p>
-    <img src="images/Anika/20190214_164124.jpg" alt="">
+    <img class="cover" src="images/Anika/20190214_164124.jpg" alt="">
 </body>
 
 </html>
